# python-sdk

./: .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.md  brownie-config.yaml  deploy.sh  docs.Dockerfile  hardhat.config.js  main.py  package.json  pyproject.toml  requirements.txt  setup.py  tox.ini  workspace.code-workspace
.github/workflows/: codeql.yml  dispatch_docs.yml  python-flake8-lint.yml  python-publish.yml  run-tests.yml  tests.yml
contracts/drop/: DropERC1155.sol  DropERC20.sol
contracts/marketplace/: Marketplace.sol
contracts/token/: TokenERC1155.sol  TokenERC20.sol  TokenERC721.sol
docs/: README.md  collection-module.rst  conf.py  index.md  mkdocs.yml  pydoc-markdown.yml  thirdweb.abi.erc165.md  thirdweb.abi.ierc1155.md  thirdweb.abi.ierc20.md  thirdweb.abi.ierc721.md  thirdweb.abi.marketplace.md  thirdweb.abi.md  thirdweb.abi.t_w_factory.md  thirdweb.abi.t_w_registry.md  thirdweb.abi.token_erc1155.md  thirdweb.abi.token_erc20.md  thirdweb.abi.token_erc721.md  thirdweb.common.md  thirdweb.constants.md  thirdweb.contracts.md  thirdweb.core.classes.md  thirdweb.core.md  thirdweb.md  thirdweb.types.md
docs-source/: bundle-module.rst  conf.py  index.rst  modules.rst
docs/common/: custom.md  index.md
docs/docs/: contract-deployer.md  contract-events.md  contract-metadata.md  contract-platform-fee.md  contract-roles.md  contract-royalty.md  contract-sales.md  custom.md  deprecations.md  drop-claim-conditions.md  edition-drop-claim-conditions.md  edition-drop.md  edition.md  erc1155-signature-minting.md  erc1155.md  erc20.md  erc721.md  feature_snippets.json  index.md  installation.md  ipfs-storage.md  marketplace-auction.md  marketplace-direct.md  marketplace.md  multiwrap.md  nft-collection.md  nft-drop.md  sdk.md  snippets.json  token.md  wallet-authenticator.md
docs/mkdocs/: mkdocs.yml
docs/modules/: nft-module.rst  pack-module.rst
docs/pydoc-markdown/: .generated-files.txt  mkdocs.yml
examples/: main.py
nftlabs/: __init__.py  sdk.py
nftlabs/abi/: __init__.py
nftlabs/constants/: __init__.py  erc_interfaces.py
nftlabs/errors/: __init__.py
nftlabs/modules/: __init__.py  base.py  collection.py  currency.py  currency_types.py  market.py  market_types.py  nft.py  nft_types.py  pack.py
nftlabs/options/: __init__.py  sdk_options.py
nftlabs/storage/: __init__.py  ipfs_storage.py
nftlabs/types/: __init__.py  listing.py  nft.py  role.py
scripts/: generate_abis.py  generate_snippets.py
scripts/abi/: generate.sh
scripts/env/: setup.sh
snippets/: snippets.json
sphinx-docs/: conf.py  index.rst  thirdweb.abi.erc165.rst  thirdweb.abi.ierc1155.rst  thirdweb.abi.ierc20.rst  thirdweb.abi.ierc721.rst  thirdweb.abi.marketplace.rst  thirdweb.abi.rst  thirdweb.abi.t_w_factory.rst  thirdweb.abi.t_w_registry.rst  thirdweb.abi.token_erc1155.rst  thirdweb.abi.token_erc20.rst  thirdweb.abi.token_erc721.rst  thirdweb.common.rst  thirdweb.constants.rst  thirdweb.contracts.rst  thirdweb.core.classes.rst  thirdweb.core.rst  thirdweb.rst  thirdweb.types.rst
tests/: conftest.py  skip_custom.py  skip_edition_drop.py  skip_multiwrap.py  test_auth.py  test_before.py  test_bundle.py  test_constants.py  test_custom.py  test_deploy.py  test_edition.py  test_events.py  test_import.py  test_ipfs.py  test_market.py  test_marketplace.py  test_nft.py  test_nft_collection.py  test_nft_drop.py  test_pack.py  test_roles.py  test_sdk.py  test_signature_mint_1155.py  test_signature_mint_20.py  test_signature_mint_721.py  test_storage.py  test_token.py  test_token_drop.py
tests/constants/: __init__.py
tests/fixtures/: accounts.py  before.py  deploy.py  sdk.py  sdk_local.py  sdk_mumbai.py
thirdweb/: __init__.py  sdk.py
thirdweb/abi/: __init__.py  access_control_enumerable.py  airdrop_erc1155.py  airdrop_erc1155_claimable.py  airdrop_erc20.py  airdrop_erc20_claimable.py  airdrop_erc721.py  airdrop_erc721_claimable.py  app_u_r_i.py  batch_mint_metadata.py  context.py  contract_metadata.py  contract_metadata_logic.py  contract_metadata_registry.py  contract_metadata_storage.py  contract_publisher.py  counters.py  currency_transfer_lib.py  default_operator_filterer.py  default_operator_filterer_upgradeable.py  delayed_reveal.py  (+255 more)
(+244 files in other folders)
