[tool.poetry]
authors = ["thirdweb <sdk@thirdweb.com>"]
description = ""
name = "thirdweb-sdk"
packages = [
  {include = "thirdweb"},
]
readme = "README.md"
version = "2.0.0-a10"

[tool.poetry.dependencies]
dacite = "^1.6.0"
mypy-extensions = "^0.4.3"
python = ">3.7.1,<=3.10.4"
thirdweb-contract-wrappers = "^2.0.4"
web3 = "5.27.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
eth-brownie = "^1.18.1"
mypy = "^0.941"
pylint = "^2.12.2"
python = ">3.7.1,<3.10"
types-requests = "^2.27.14"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
